stretch challenge: update styles to look like alarm clock, conditional rendering of start/stop button with red/green color

--- a/timers-app/src/components/NewTimer.css
+++ b/timers-app/src/components/NewTimer.css
@@ -1,6 +1,6 @@
 .NewTimer {
 	display: flex;
-	justify-content: center;
+    justify-content: center;
 }
 
 .NewTimer > input {
@@ -13,11 +13,11 @@
 
 .NewTimer > button {
 	font-size: 1rem;
-	padding: 0.25rem 0.5rem;
+	padding: 0.5rem 1rem;
 	border-radius: 0 0.5rem 0.5rem 0;
 	border: 1px solid #000;
 	margin: 0;
-	background-color: #000;
-	color: #fff;
+	background-color: yellowgreen;
+	color: black;
 	font-weight: bold;
 }
