--- a/timers-app/src/components/TimerView.css
+++ b/timers-app/src/components/TimerView.css
@@ -3,30 +3,35 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	align-items: baseline;
+	align-items: center;
     border: 1px solid #000;
     padding: 5%;
     margin: 5% auto;
+    background-color: black;
+    border: 2px solid greenyellow;
+    border-radius: 30px;
 }
 
 .TimerView > h1 {
-	flex:1;
 	margin: 1rem;
 	text-align: left;
-	font-variant-numeric: tabular-nums;
+	font-family: monospace;
+    font-size: 3rem;
+    color: greenyellow;
 }
 
 .TimerView > h2 {
-	flex: 1;
+    color: white;
 }
 
 .TimerView > button {
-	padding: 0.25rem 0.5rem;
-	border-radius: 0.5rem;
-	border: 1px solid #000;
-	background-color: #000;
-	color: #fff;
+	padding: 0.5rem 1rem;
+    text-align: center;
+	border-radius: 10px;
+    border: 2px solid transparent;
+	color: black;
 	font-size: 1rem;
 	font-weight: bold;
-	width: 4rem;
+    margin: 5% 0;
+    width: 100px;
 }
